2010-01-29  GatoLoko  <GatoLoko@gmail.com>

 * antispam.py: comprobar DE VERDAD si el antispam esta activado o no en la
   configuracion y actuar en consecuencia.
 * antispam.py: diferenciada la gestion de spam (mensajes en canales publicos)
   de la gestion de bots (mensajes privados). Ahora antibots no depende de que
   antispam este activado. Si el mensaje se ha recibido en un canal, no se
   comprueba si se ha recibido en un privado (pequeña optimizacion).

2010-01-12  GatoLoko  <GatoLoko@gmail.com>

 * resaltados.py: corregido un error tipografico en la expresion regular que
   identifica algunas URLs.
 * resaltados.py: corregido un bug que introducia un caracter extraño en los
   mensajes de la red Freenode.

2010-01-05  GatoLoko  <GatoLoko@gmail.com>

 * p2p.py: eliminado un mensaje de error al mostrar las estadisticas de
   transmission.

2010-01-04  GatoLoko  <GatoLoko@gmail.com>

 * antispam.py: corregido otro fallo en la consulta sql usada para añadir
   nuevos filtros a la base de datos.
 * antispam.py: eliminado codigo residual de una antigua prueba.
 * antispam.py: corregido un fallo en el sistema anti spambots.
 * antispam.py: pequeña correccion de formato.
 * media.py: dos correcciones de formato.
 * media.py: corregido un comentario.
 * remotos.py: modificado para que solo actue en los canales especificados.
 * p2p.py: adaptado transmission_cb para soportar la nueva ubicacion y formato
   de las estadisticas.

2009-12-11  GatoLoko  <GatoLoko@gmail.com>

 * remotos.py: revision completa del modulo y adaptado para gestionar los
   remotos en la base de datos.
 * gatoscript.db: agregada la tabla "remotos".
 * protecciones.py: arreglados varios errores de formato.
 * antispam.py: corregido un fallo en la consulta sql usada para añadir nuevos
   filtros a la base de datos.
 * notas.py: agregado nuevo modulo para gestionar notas.
 * gatoscript.py: activados los modulos: remotos.py y notas.py
 * ejemplo.py: arreglados algunos comentarios.
